--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <article>
                 <header>
                     <h2>Judith Mulato</h2>
-                    <h1> minha mulher I love you</h1>
+                    <h1> minha mulher I love you --- My Iphone 6</h1>
 
                     <form id='add-item'>
                         <button type='submit'>Add</button>
