--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset='utf-8' />
-        <title>Todo list: zenildopinto</title>
+        <title>Todo list: Microsoft</title>
         <link rel='stylesheet' href='styles.css' />
         <meta name='viewport' content='width=device-width' />
         <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script><![endif]-->
@@ -11,8 +11,8 @@
         <div id='wrapper'>
             <article>
                 <header>
-                    <h2>Judith Mulato</h2>
-                    <h1> minha mulher I love you --- My Iphone 6</h1>
+                    <h2>Microsoft</h2>
+                    <h1> Mobile MobileServicess </h1>
 
                     <form id='add-item'>
                         <button type='submit'>Add</button>
